--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -1,2 +1,3 @@
 <h1>welcome {$user[user_name]}</h1>
+<a href="{:U('User/Index/index')}"><div>查看用户信息</div></a>
 <a href="{:U('Login/Index/logout')}">logout</a>
