--- a/Application/User/View/Index/add.html
+++ b/Application/User/View/Index/add.html
@@ -1,5 +1,5 @@
-<form action="{:U('User/Index/save')}" method="post">
-	<label>用户名：</label><input type ="text" name="name"/></br>
-	<label>密码：</label><input type = "password" name="password" /></br>
+<form <eq name="Think.ACTION_NAME" value="add"> action="{:U('save')}"<else />action="{:U('update')}"</eq> method="post">
+	<label>用户名：</label><input type ="text" name="name" value="{$user.name}" /></br>
+	<label>密码：</label><input type = "password" name="password" value="{$user.password}"/></br>
 	<button type="submit">保存</button>
 </form>
