--- a/Application/User/View/Index/index.html
+++ b/Application/User/View/Index/index.html
@@ -1,5 +1,5 @@
 	<div>
-        <button type="button" onclick="location='{:U('add')}'">添加用户</button>
+        <a class="button"  href="{:U('add')}" >添加用户</a>
     </div>
 	<table>
 		<tr>
@@ -13,9 +13,9 @@
 				<td>{$k+1}</td>
 				<td>{$user[id]}</td>
 				<td>{$user[name]}</td>
-				<td><button onclick="location='{$user._url.detail}'">查看</button></td>
-				<td><button onclick="location='{$user._url.edit}'">编辑</button></td>
-				<td><button onclick="location='{$user._url.delete}'">删除</button></td>
+				<td><a class="button" href="{:U('detail?id='.$user['id'])}">查看</a></td>
+				<td><a class="button" href="{:U('edit?id='.$user['id'])}">编辑</a></td>
+				<td><a class="button" href="{:U('delete?id='.$user['id'])}">删除</a></td>
 			</tr>
 		</foreach>	
 	</table>
