--- a/Application/User/View/Index/add.html
+++ b/Application/User/View/Index/add.html
@@ -1,6 +1,19 @@
-<form <eq name="Think.ACTION_NAME" value="add"> action="{:U('save')}"<else />action="{:U('update')}"</eq> method="post">
-<input type="hidden" name="id" value="{$user.id}"></input>
+	<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<title>添加修改用户</title>
+</head>
+<body>
+	<form <eq name="Think.ACTION_NAME" value="add"> action="{:U('save')}"<else />action="{:U('update')}"</eq> method="post">
+	<input type="hidden" name="id" value="{$user.id}"></input>
 	<label>用户名：</label><input type ="text" name="name" value="{$user.name}" /></br>
 	<label>密码：</label><input type = "password" name="password" value="{$user.password}"/></br>
-	<button type="submit">保存</button>
-</form>
+	<label>确认密码：</label><input type = "password" name="repassword" value="{$user.repassword}"/></br>
+	<label>手机号：</label><input type ="text" name="phonenumber" value="{$user.phonenumber}" /></br>
+	<label>地址：</label><input type = "text" name="address" value="{$user.address}"/></br>
+	<label>邮箱：</label><input type = "text" name="email" value="{$user.emails}"/></br>
+	<button type="submit">保存</button
+	</form>
+	</body>
+	</html>
