--- a/Application/User/View/Index/index.html
+++ b/Application/User/View/Index/index.html
@@ -6,6 +6,9 @@
 			<th>序号</th>
 			<th>ID</th>
 			<th>name</th>
+			<th>手机号</th>
+			<th>地址</th>
+			<th>邮箱</th>
 			<th>操作</th>
 		</tr>
 		<foreach name="users" item="user" key="k">
@@ -13,6 +16,9 @@
 				<td>{$k+1}</td>
 				<td>{$user[id]}</td>
 				<td>{$user[name]}</td>
+				<td>{$user[phonenumber]}</td>
+				<td>{$user[address]}</td>
+				<td>{$user[email]}</td>
 				<td><a class="button" href="{:U('detail?id='.$user['id'])}">查看</a></td>
 				<td><a class="button" href="{:U('edit?id='.$user['id'])}">编辑</a></td>
 				<td><a class="button" href="{:U('delete?id='.$user['id'])}">删除</a></td>
