修改的自动验证，添加修改的自定完成
增加了用户状态，创建时间，更改时间

--- a/Application/User/View/Index/add.html
+++ b/Application/User/View/Index/add.html
@@ -12,7 +12,7 @@
 	<label>确认密码：</label><input type = "password" name="repassword" value="{$user.repassword}"/></br>
 	<label>手机号：</label><input type ="text" name="phonenumber" value="{$user.phonenumber}" /></br>
 	<label>地址：</label><input type = "text" name="address" value="{$user.address}"/></br>
-	<label>邮箱：</label><input type = "text" name="email" value="{$user.emails}"/></br>
+	<label>邮箱：</label><input type = "text" name="email" value="{$user.email}"/></br>
 	<button type="submit">保存</button
 	</form>
 	</body>
