--- a/Application/User/View/Index/index.html
+++ b/Application/User/View/Index/index.html
@@ -19,9 +19,9 @@
 				<td>{$user[phonenumber]}</td>
 				<td>{$user[address]}</td>
 				<td>{$user[email]}</td>
-				<td><a class="button" href="{:U('detail?id='.$user['id'])}">查看</a></td>
-				<td><a class="button" href="{:U('edit?id='.$user['id'])}">编辑</a></td>
-				<td><a class="button" href="{:U('delete?id='.$user['id'])}">删除</a></td>
+				<td><a class="button" href="{:U('detail?id='.$user['id'].'&p='.I('get.p'))}">查看</a></td>
+				<td><a class="button" href="{:U('edit?id='.$user['id'].'&p='.I('get.p'))}">编辑</a></td>
+				<td><a class="button" href="{:U('delete?id='.$user['id'].'&p='.I('get.p'))}">删除</a></td>
 			</tr>
 		</foreach>	
 	</table>
