--- a/Application/Litian/View/User/detail.html
+++ b/Application/Litian/View/User/detail.html
@@ -1,2 +1,4 @@
 <label>用户名</label>:{$user[name]}</br>
-<label>密码</label>:{$user[password]}
+<label>密码</label>:{$user[password]}</br>
+<label>手机</label>:{$user[phone]}</br>
+<label>邮箱</label>:{$user[email]}</br>
