--- a/Application/Litian/View/User/edit.html
+++ b/Application/Litian/View/User/edit.html
@@ -1,4 +1,4 @@
-<form <eq name="Think.ACTION_NAME" value="edit"> action="{:U('save')}"<else />action="{:U('update')}"</eq> method="post">
+<form <eq name="Think.ACTION_NAME" value="edit"> action="{:U('update')}"<else />action="{:U('save')}"</eq> method="post">
 
     <input type="hidden" name="id" value="{$user.id}"></input>
     <label for="name">用户名:</label>
@@ -7,6 +7,11 @@
     <label for="password">密码：</label>
     <input type="password" name="password" value="{$user.password}" />
 
+    <label for="password">手机：</label>
+    <input type="text" name="phone" value="{$user.phone}" />
+
+    <label for="password">邮箱：</label>
+    <input type="email" name="email" value="{$user.email}" />
 
     <button type="submit">保存</button>
 </form>
