--- a/Application/User/View/Index/index.html
+++ b/Application/User/View/Index/index.html
@@ -1,7 +1,39 @@
 	<div>
         <a class="button"  href="{:U('add')}" >添加用户</a>
     </div>
+    <form action="{:U('index')}" method="get">
+    <div>
+    	<input type="text" placeholder="search" name="keywords" value ="{:I('get.keywords')}"
+         ></input>
+    	<button id="search" type="submit">搜索</button>
+    </div>
+   
 	<table>
+		<tr>
+			<th>序号</th>
+			<th>ID</th>
+			<th>name</th>
+			<th>手机号</th>
+			<th>地址</th>
+			<th>邮箱</th>
+			<th>操作</th>
+		</tr>
+		<foreach name="search" item="user" key="k">
+			<tr>
+				<td>{$k+1}</td>
+				<td>{$user[id]}</td>
+				<td>{$user[name]}</td>
+				<td>{$user[phonenumber]}</td>
+				<td>{$user[address]}</td>
+				<td>{$user[email]}</td>
+				<td><a class="button" href="{:U('detail?id='.$user['id'].'&p='.I('get.p'))}">查看</a></td>
+				<td><a class="button" href="{:U('edit?id='.$user['id'].'&p='.I('get.p'))}">编辑</a></td>
+				<td><a class="button" href="{:U('delete?id='.$user['id'].'&p='.I('get.p'))}">删除</a></td>
+			</tr>
+		</foreach>	
+	</table>
+	</form>
+	 <table>
 		<tr>
 			<th>序号</th>
 			<th>ID</th>
