--- a/Application/Liuxi/View/User/add.html
+++ b/Application/Liuxi/View/User/add.html
@@ -6,9 +6,13 @@
 </head>
 <body>
     <form <eq name = "Think.Action_NAME" value = "add"> action = "{:U('save')}"<else/>action = "{:U('update')}"</eq>method = 'post'>
-    <label>用户名：</label> <input type ="text" name ="name" value ="{$user.name}"/></br>
-    <label>密码：</label><input type = "password" name = "password" value = "{$user.password}"/></br>
-    <button type = "submit">保存</button>
+        <label>用户名：</label> <input type ="text" name ="name" value ="{$user.name}"/></br>
+        <label>密码：</label><input type = "password" name = "password" value = "{$user.password}"/></br>
+        <label>确认密码：</label><input type = "password" name="repassword" value="{$user.repassword}"/></br>
+	    <label>手机号：</label><input type ="text" name="phonenumber" value="{$user.phonenumber}" /></br>
+	    <label>地址：</label><input type = "text" name="address" value="{$user.address}"/></br>
+	    <label>邮箱：</label><input type = "text" name="email" value="{$user.email}"/></br>
+        <button type = "submit">保存</button>
     </form>
 </body>
 </html>
