--- a/Application/Liuxi/View/User/index.html
+++ b/Application/Liuxi/View/User/index.html
@@ -13,6 +13,9 @@
 				<td>{$k+1}</td>
 				<td>{$user[id]}</td>
 				<td>{$user[name]}</td>
+				<td>{$user[phonenumber]}</td>
+				<td>{$user[address]}</td>
+				<td>{$user[email]}</td>
 				<td><a class="button" href="{:U('detail?id='.$user[id])}">查看</a></td>
 				<td><a class="button" href="{:U('edit?id='.$user['id'])}">编辑</a></td>
 				<td><a class="button" href="{:U('delete?id='.$user['id'])}">删除</a></td>
