--- a/Application/Litian/View/User/index.html
+++ b/Application/Litian/View/User/index.html
@@ -20,9 +20,9 @@
             <td>{$user[email]}</td>
             <td>{$user[phone]}</td>
             <td>
-            <a class="button" href="{:U('detail?id='.$user['id'])}">查看</a>
-            <a class="button" href="{:U('edit?id='.$user['id'])}">编辑</a>
-            <a class="button" href="{:U('delete?id='.$user['id'])}">删除</a>
+            <a class="button" href="{:U('detail?id='.$user['id'].'p='.I('get.p'))}">查看</a>
+            <a class="button" href="{:U('edit?id='.$user['id'].'p='.I('get.p'))}">编辑</a>
+            <a class="button" href="{:U('delete?id='.$user['id'].'p='.I('get.p'))}">删除</a>
         </tr>
     </foreach>
     </tbody>
