--- a/Application/Anqiang/View/User/index.html
+++ b/Application/Anqiang/View/User/index.html
@@ -7,20 +7,23 @@
         <tr>
             <th>序号</th>
             <th>用户名</th>
+            <th>手机号</th>
 
         </tr>
     </thead>
     <tbody>
-    <foreach name="users" item="user" key="k">
-        <tr>
-            <td>{$k+1}</td>
-            <td>{$user[name]}</td>
+        <foreach name="users" item="user" key="k">
+            <tr>
+                <td>{$k+1}</td>
+                <td>{$user[name]}</td>
+                <td>{$user[phonenumber]}</td>
 
-            <td>
-            <a class="button" href="{:U('detail?id='.$user['id'])}">查看</a>
-            <a class="button" href="{:U('edit?id='.$user['id'])}">编辑</a>
-            <a class="button" href="{:U('delete?id='.$user['id'])}">删除</a>
-        </tr>
-    </foreach>
+                <td>
+                    <a class="button" href="{:U('detail?id='.$user['id'])}">查看</a>
+                    <a class="button" href="{:U('edit?id='.$user['id'])}">编辑</a>
+                    <a class="button" href="{:U('delete?id='.$user['id'])}">删除</a>
+                </td>
+            </tr>
+        </foreach>
     </tbody>
 </table>
