--- a/Application/Liuxi/View/User/detail.html
+++ b/Application/Liuxi/View/User/detail.html
@@ -1,5 +1,5 @@
 <label>用户名:</label>{$user[name]}</br>
 <label>密码:</label>{$user[password]}</br>
-<label>用户名:</label>{$user[phonenumber]}</br>
-<label>密码:</label>{$user[address]}</br>
-<label>密码:</label>{$user[email]}</br>
+<label>电话号码:</label>{$user[phonenumber]}</br>
+<label>地址:</label>{$user[address]}</br>
+<label>邮箱:</label>{$user[email]}</br>
