--- a/Application/Liuxi/View/User/index.html
+++ b/Application/Liuxi/View/User/index.html
@@ -6,6 +6,9 @@
 			<th>序号</th>
 			<th>ID</th>
 			<th>name</th>
+			<th>手机号</th>
+			<th>地址</th>
+			<th>邮箱</th>
 			<th>操作</th>
 		</tr>
 		<foreach name="users" item="user" key="k">
