自动完成和搜索框补上

--- a/Application/Anqiang/View/User/edit.html
+++ b/Application/Anqiang/View/User/edit.html
@@ -10,10 +10,13 @@
     <label for="password">密码：</label>
     <input type="password" name="password" value="{$user.password}" /><br />
 
-    <label for="repassword">确认密码：</label><input type = "password" name="repassword"  /></br>
+    <label for="repassword">确认密码：</label><input type = "password" name="repassword" value="{$user.repassword}"  /></br>
 
     <label for="phonenumber">手机：</label>
     <input type="text" name="phonenumber" value="{$user.phonenumber}"/><br />
+
+    <label for="mailbox">邮箱：</label>
+    <input type="text"  name="mailbox"  value="{$user.mailbox}"/><br />
 
 
 
