--- a/Application/Liuxi/View/User/index.html
+++ b/Application/Liuxi/View/User/index.html
@@ -1,11 +1,15 @@
 <div>
     <a class="button"  href="{:U('add')}" >添加用户</a>
 </div>
+    <form action = "{:U('index')}" method = "get">
 	<table>
 		<tr>
 			<th>序号</th>
 			<th>ID</th>
 			<th>name</th>
+			<th>手机号</th>
+			<th>地址</th>
+			<th>邮箱</th>
 			<th>操作</th>
 		</tr>
 		<foreach name="users" item="user" key="k">
@@ -16,9 +20,12 @@
 				<td>{$user[phonenumber]}</td>
 				<td>{$user[address]}</td>
 				<td>{$user[email]}</td>
-				<td><a class="button" href="{:U('detail?id='.$user[id])}">查看</a></td>
-				<td><a class="button" href="{:U('edit?id='.$user['id'])}">编辑</a></td>
-				<td><a class="button" href="{:U('delete?id='.$user['id'])}">删除</a></td>
+				<td><a class="button" href="{:U('detail?id='.$user[id].'&p='.I('get.p'))}">查看</a></td>
+				<td><a class="button" href="{:U('edit?id='.$user['id'].'&p='.I('get.p'))}">编辑</a></td>
+				<td><a class="button" href="{:U('delete?id='.$user['id'].'&p='.I('get.p'))}">删除</a></td>
 			</tr>
 		</foreach>	
 	</table>
+	</form>
+
+	{$page}
