--- a/Application/Anqiang/View/User/edit.html
+++ b/Application/Anqiang/View/User/edit.html
@@ -10,6 +10,14 @@
     <label for="password">密码：</label>
     <input type="password" name="password" value="{$user.password}" /><br />
 
+    <label for="repassword">确认密码：</label><input type = "password" name="repassword" value="{$user.repassword}"  /></br>
+
+    <label for="phonenumber">手机：</label>
+    <input type="text" name="phonenumber" value="{$user.phonenumber}"/><br />
+
+    <label for="mailbox">邮箱：</label>
+    <input type="text"  name="mailbox"  value="{$user.mailbox}"/><br />
+
 
 
     <button type="submit">保存</button>
