--- a/Application/Anqiang/View/User/index.html
+++ b/Application/Anqiang/View/User/index.html
@@ -1,5 +1,5 @@
 
-<a class="buttom" href="{:U('add')}">
+<a class="buttom" href="{:U('add?p='.I('get.p'))}">
     添加用户
 </a>
 
@@ -27,9 +27,9 @@
                 <td>{$user[mailbox]}</td>
 
                 <td>
-                    <a class="button" href="{:U('detail?id='.$user['id'])}">查看</a>
-                    <a class="button" href="{:U('edit?id='.$user['id'])}">编辑</a>
-                    <a class="button" href="{:U('delete?id='.$user['id'])}">删除</a>
+                    <a class="button" href="{:U('detail?id='.$user['id'].'&p='.I('get.p'))}">查看</a>
+                    <a class="button" href="{:U('edit?id='.$user['id'].'&p='.I('get.p'))}">编辑</a>
+                    <a class="button" href="{:U('delete?id='.$user['id'].'&p='.I('get.p'))}">删除</a>
                 </td>
             </tr>
         </foreach>
