--- a/Application/User/View/Index/add.html
+++ b/Application/User/View/Index/add.html
@@ -13,7 +13,7 @@
 	<label>手机号：</label><input type ="text" name="phonenumber" value="{$user.phonenumber}" /></br>
 	<label>地址：</label><input type = "text" name="address" value="{$user.address}"/></br>
 	<label>邮箱：</label><input type = "text" name="email" value="{$user.email}"/></br>
-	<button type="submit">保存</button
+	<button type="submit">保存</button>
 	</form>
 	</body>
 	</html>
