--- a/Application/Ionic/View/Index/index.html
+++ b/Application/Ionic/View/Index/index.html
@@ -19,19 +19,33 @@
 
 <body>
     <ion-header-bar align-title="center" class="bar-positive">
-        <h1 class="title">下拉刷新（请使用FIREFOX浏览器阅览）</h1>
+        <h1 class="title">复选框</h1>
     </ion-header-bar>
-    <ion-pane>
-        <ion-content ng-controller="refreshCtrl">
-          <ion-refresher
-              pulling-text="下拉刷新"
-              on-refresh="doRefresh()">
-           </ion-refresher>
-           <ion-list>
-              <ion-item ng-repeat="item in items" ng-bind="item.name"></ion-item>
-           </ion-list>
-        </ion-content>
-    </ion-pane>
+    <ion-content ng-controller="checkboxCtrl">
+        <div class="list">
+            <ion-checkbox ng-repeat="item in devList" ng-model="item.checked" ng-checked="item.checked">
+                {{item.text}}
+            </ion-checkbox>
+            <div class="item">
+                <div ng-bind="devList | json"></div>
+            </div>
+            <div class="item item-divider">
+                Notifications
+            </div>
+            <ion-checkbox ng-model="pushNotificaton.checked" ng-change="pushNotificatonChange()">
+                Push Notification
+            </ion-checkbox>
+            <div class="item">
+                <div ng-bind="pushNotificaton | json"></div>
+            </div>
+
+            <ion-checkbox ng-model="emailNotification" ng-true-value="'Subscribed'" ng-false-value="'Unsubscribed'">Newsletter</ion-checkbox>
+            
+            <div class="item">
+              <div ng-bind="emailNotification | json"></div>
+            </div>
+        </div>
+    </ion-content>
 </body>
 
 </html>
