--- a/Application/Ionic/View/Index/index.html
+++ b/Application/Ionic/View/Index/index.html
@@ -14,38 +14,11 @@
     <script src="__LIB__/ionic/js/ionic.bundle.js"></script>
     <!-- your app's js -->
     <script src="__JS__/app.js"></script>
-    <script src="__JS__/controllers.js"></script>
+    <script src="{:U('controllers.js')}"></script>
 </head>
 
-<body>
-    <ion-header-bar align-title="center" class="bar-positive">
-        <h1 class="title">复选框</h1>
-    </ion-header-bar>
-    <ion-content ng-controller="checkboxCtrl">
-        <div class="list">
-            <ion-checkbox ng-repeat="item in devList" ng-model="item.checked" ng-checked="item.checked">
-                {{item.text}}
-            </ion-checkbox>
-            <div class="item">
-                <div ng-bind="devList | json"></div>
-            </div>
-            <div class="item item-divider">
-                Notifications
-            </div>
-            <ion-checkbox ng-model="pushNotificaton.checked" ng-change="pushNotificatonChange()">
-                Push Notification
-            </ion-checkbox>
-            <div class="item">
-                <div ng-bind="pushNotificaton | json"></div>
-            </div>
-
-            <ion-checkbox ng-model="emailNotification" ng-true-value="'Subscribed'" ng-false-value="'Unsubscribed'">Newsletter</ion-checkbox>
-            
-            <div class="item">
-              <div ng-bind="emailNotification | json"></div>
-            </div>
-        </div>
-    </ion-content>
+<body ng-controller="MyController">
+<button ng-click="openModal()">点我打开</button>
 </body>
 
 </html>
