--- a/Application/Ionic/View/Index/index.html
+++ b/Application/Ionic/View/Index/index.html
@@ -18,7 +18,20 @@
 </head>
 
 <body ng-controller="MyController">
-<button ng-click="openModal()">点我打开</button>
+<ion-header-bar class="bar-positive">
+<h1 class="title">联系人</h1>
+<div class="buttons">
+<button class="button button-icon ion-compose" ng-click="openModal(newUser)">
+</button>
+</div>
+</ion-header-bar>
+<ion-content>
+<ion-list>
+<ion-item ng-repeat="contact in contacts" ng-click="openModal(contact)">
+{{contact.firstName}}
+</ion-item>
+</ion-list>
+</ion-content>
 </body>
 
 </html>
