--- a/Application/Ionic/View/Index/my-modal.html
+++ b/Application/Ionic/View/Index/my-modal.html
@@ -1,9 +1,23 @@
 <ion-modal-view>
-<ion-header-bar>
-<h1 class="title">my modal title</h1>
-</ion-header-bar>
-<ion-content>
-<button ng-click="closeModal()">点我关闭</button>
-<p>其它的功能，请查看<a href="http://codepen.io/myskies/pen/OyGPVE?editors=101">modal示例代码</p>
-</ion-content>
+    <ion-header-bar class="bar bar-header bar-positive">
+        <h1 class="title">new</h1>
+        <button class="button button-clear button-primary" ng-click="modal.hide()">cancel</button>
+    </ion-header-bar>
+    <ion-content class="padding">
+        <div class="list">
+            <label class="item item-input">
+                <span class="input-label">First Name</span>
+                <input ng-model="newUser.firstName" type="text" />
+            </label>
+            <label class="item item-input">
+                <span class="input-label">Last Name</span>
+                <input ng-model="newUser.lastName" type="text" />
+            </label>
+            <label class="item item-input">
+                <span class="input-label">Email</span>
+                <input ng-model="newUser.email" type="email" />
+            </label>
+            <button class="button button-full button-positive" ng-click="create(newUser)">Create</button>
+        </div>
+    </ion-content>
 </ion-modal-view>
