--- a/Application/Ionic/View/Index/index.html
+++ b/Application/Ionic/View/Index/index.html
@@ -17,34 +17,12 @@
     <script src="__JS__/controllers.js"></script>
 </head>
 
-<body>
+<body ng-controller="MyCtrl" id="eventPlaceholder">
     <ion-header-bar align-title="center" class="bar-positive">
-        <h1 class="title">复选框</h1>
+        <h1 class="title">{{lastEventCall}}</h1>
     </ion-header-bar>
-    <ion-content ng-controller="checkboxCtrl">
-        <div class="list">
-            <ion-checkbox ng-repeat="item in devList" ng-model="item.checked" ng-checked="item.checked">
-                {{item.text}}
-            </ion-checkbox>
-            <div class="item">
-                <div ng-bind="devList | json"></div>
-            </div>
-            <div class="item item-divider">
-                Notifications
-            </div>
-            <ion-checkbox ng-model="pushNotificaton.checked" ng-change="pushNotificatonChange()">
-                Push Notification
-            </ion-checkbox>
-            <div class="item">
-                <div ng-bind="pushNotificaton | json"></div>
-            </div>
-
-            <ion-checkbox ng-model="emailNotification" ng-true-value="'Subscribed'" ng-false-value="'Unsubscribed'">Newsletter</ion-checkbox>
-            
-            <div class="item">
-              <div ng-bind="emailNotification | json"></div>
-            </div>
-        </div>
+    <ion-content >
+       
     </ion-content>
 </body>
 
