--- a/Application/Litian/View/User/confirm.html
+++ b/Application/Litian/View/User/confirm.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+<html ng-app="yunzhiclub">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+  <title></title>
 
-    <link href="__LIB__/ionic/css/ionic.css" rel="stylesheet" type="text/css">
-    <link href="__CSS__/style.css" rel="stylesheet">
-    <link href="__CSS__/iconfont.css" rel="stylesheet">
-    <!-- IF using Sass (run gulp sass first), then remove the CSS include above
+  <link href="__LIB__/ionic/css/ionic.css" rel="stylesheet">
+  <link href="__CSS__/style.css" rel="stylesheet">
+
+    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
-    -->
+  -->
+  <!-- ionic/angularjs js -->
+  <script src="__LIB__/ionic/js/ionic.bundle.js"></script>
 
-    <!-- ionic/angularjs js -->
-    <script src="__LIB__/ionic/js/ionic.bundle.js"></script>
+  <!-- your app's js -->
+  <script src="__JS__/app.js"></script>
 
-    <!-- cordova script (this will be a 404 during development) -->
-
-
-    <!-- your app's js -->
-    <script src="__JS__/app.js"></script>
-  </head>
-
-  <body ng-controller="MyCtrl">
+</head>
+<body ng-controller="MyCtrl">
 
 <div class="bar bar-header bar-positive">
   <a href="" class="button button-icon icon ion-chevron-left"></a>
@@ -104,3 +100,4 @@
 </div> -->
 </body>
 </html>
+
