--- a/Application/Anqiang/View/User/commentsok.html
+++ b/Application/Anqiang/View/User/commentsok.html
@@ -21,41 +21,18 @@
 
 </head>
 <body ng-controller="MyCtrl">
-<!-- <div class="word">
-  <p class="large">点评成功！！</p>
-  <p class="medium">获得积分&nbsp+5</p>
-  <p class="small"><a>我的积分>></a></p>
-</div> -->
 <div class="scroll-content has-header">
-<div>
-<div class="row">
-  <div class="col">
-    <h1 class="word">点评成功</h1>
+  <div class="list">
+    <div class="item">
+      <h2 class="title">点评成功</h1>
+    </div>
+    <div class="item">
+      <h2 class="title">获得积分+5</h1>
+    </div>
+    <div class="item">
+      <button class="button button-block">我的积分</button>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col">
-    <h3 class="word">获得积分+5</h4>
-  </div>
-</div>
-<div class="row">
-  <div class="col">
-    <h4 class="word undl">我的积分>></h6>
-  </div>
-</div>
-</div>
 </div>
 </body>
 </html>
-<style type="text/css">
-.word
-{
-  color: blue;
-  text-align:center;
-  
-}
-.undl
-{
-  text-decoration: underline;
-}
-</style>
