modify font file

--- a/Application/Litian/View/User/list.html
+++ b/Application/Litian/View/User/list.html
@@ -6,8 +6,8 @@
     <title></title>
 
 
-    <link href="__CSS__/style.css" rel="stylesheet">
-    <link href="__CSS__/iconfont.css" rel="stylesheet">
+    <!-- <link href="__CSS__/iconfont.css" rel="stylesheet"> -->
+    <link href="__LIB__/ionic/css/ionic.css" rel="stylesheet">
     <!-- IF using Sass (run gulp sass first), then remove the CSS include above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
@@ -25,7 +25,7 @@
   <body>
   <ul>
     <li>
-      <i class="icon iconfont icon-computer"></i>
+      <i class="icon-computer"></i>
     </li>
     <li>
       <i class="icon iconfont">&#xe602</i>
