--- a/Public/lib/ionic/css/ionic.css
+++ b/Public/lib/ionic/css/ionic.css
@@ -38,7 +38,7 @@
 .icon,.iconfont,
 .icon-computer:before {
   display: inline-block;
-  font-family: "Ionicons";
+  font-family: "Iconfont";
   speak: none;
   font-style: normal;
   font-weight: normal;
