加上了评论界面

--- a/Application/HomePage/View/Index/indexApp.js.html
+++ b/Application/HomePage/View/Index/indexApp.js.html
@@ -27,6 +27,15 @@ app.config(function($stateProvider, $urlRouterProvider){
             }
         }
     })
+    .state('tabs.evaluationing',{
+        url: "/evaluationing",
+        views:{
+        	//评论界面
+            'home-tab':{
+                templateUrl: "templates/indexEvaluationing.html"
+            }
+        }
+    })
     .state("tabs.rim",{
         url: "/rim",
         views: {
