--- a/Application/HomePage/View/Index/indexEvaluation.html
+++ b/Application/HomePage/View/Index/indexEvaluation.html
@@ -21,7 +21,7 @@
         </div>
       </div>
     </div>
-     <a class="button button-block button-positive" href="#/tab/evaluationing">提交评论</a>
+     <a class="button button-block button-positive" href="#/tab/evaluationing">我要评论</a>
   </div>
 
 </ion-view>
