--- a/Application/Litian/View/User/list.html
+++ b/Application/Litian/View/User/list.html
@@ -25,10 +25,10 @@
   <body>
   <ul>
     <li>
-      <i class="icon-computer"></i>
+      <i class="ion-computer"></i>
     </li>
     <li>
-      <i class="icon iconfont">&#xe602</i>
+      <i class="ion ionicons">&#xe602</i>
     </li>
   </ul>
 
