--- a/Application/Liuxi/View/User/personalcenter.html
+++ b/Application/Liuxi/View/User/personalcenter.html
@@ -7,7 +7,7 @@
 
   <link href="__LIB__/ionic/css/ionic.css" rel="stylesheet">
   <link href="__CSS__/style.css" rel="stylesheet">
-  <link href="//at.alicdn.com/t/font_1449039393_1907313.css" rel="stylesheet">
+  <link href="http://at.alicdn.com/t/font_1449039393_1907313.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -17,7 +17,7 @@
 
   <!-- your app's js -->
   <script src="__JS__/app.js"></script>
-  <style>
+<!--  /* <style>
   @font-face {
   font-family: 'Ionicons';
   src: url('//at.alicdn.com/t/font_1449039392_1796627.eot'); /* IE9*/
@@ -26,14 +26,14 @@
   url('//at.alicdn.com/t/font_1449039392_1796627.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
   url('//at.alicdn.com/t/font_1449039392_1796627.svg#Ionicons') format('svg'); /* iOS 4.1- */
   }
-  </style>
+  </style>*/ -->
 </head>
 <body ng-controller="MyCtrl">
 
 <div class="bar bar-header bar-positive">
-  <a href="#/app/capture" class="button button-icon icon ion-chevron-left"></a>
+  <a href="#/app/capture" class="button button-icon Ionicons icon-iconfontunie61e"></a>
   <h1 class="title">个人中心</h1>
-  <a href="#/app/capture" class="button button-icon icon ion-gear-a"></a>
+  <a href="#/app/capture" class="button button-icon Ionicons icon-iconshezhi "></a>
 </div>
 
 <ion-content class="bar-content">
@@ -50,15 +50,15 @@
 
     <div class="button-bar">
       <a class="button button-light">
-        <i class="iconfont icon-daizhifu"></i>
+        <i class="Ionicons icon-daizhifu"></i>
         <p>待支付</p>
       </a>
       <a class="button button-light">
-        <i class="iconfont icon-daipinglun"></i>
+        <i class="Ionicons icon-daipinglun"></i>
         <p>待评价</p>
       </a>
       <a class="button button-light">
-        <i class="iconfont icon-daizhifu"></i>
+        <i class="Ionicons icon-ruzhu"></i>
         <p>待入住</p>
       </a>
     <!--   <a class="tab-item">
@@ -79,39 +79,39 @@
 
     </div>
 
-    <a class="item item-icon-left item-icon-right" href="#">
-    <i class="icon ion-ios-list-outline"></i>
+    <a class="item item-Ionicons-left item-Ionicons-right" href="#">
+    <i class="Ionicons icon-quanbudingdan"></i>
       全部订单
-    <i class="icon ion-ios-arrow-right"></i>
+    <i class="Ionicons icon-iconfontunie623"></i>
     </a>
-    <a class="item item-icon-left item-icon-right" href="#">
-    <i class="icon ion-ios-pricetags-outline"></i>
+    <a class="item item-Ionicons-left item-Ionicons-right" href="#">
+    <i class="Ionicons icon-jifen"></i>
       查看积分
-    <i class="icon ion-ios-arrow-right"></i>
+    <i class="Ionicons icon-iconfontunie623"></i>
     </a>
-    <a class="item item-icon-left item-icon-right" href="#">
-    <i class="icon ion-ios-telephone-outline"></i>
+    <a class="item item-Ionicons-left item-Ionicons-right" href="#">
+    <i class="Ionicons icon-kefu"></i>
       客服  ********
-    <i class="icon ion-ios-arrow-right"></i>
+    <i class="Ionicons icon-iconfontunie623"></i>
     </a>
   </div>
 </ion-content>
  
-<div class="tabs tabs-icon-top tabs-positive">
+<div class="tabs tabs-Ionicons-top tabs-positive">
   <a class="tab-item">
-    <i class="icon ion-ios-home-outline"></i>
+    <i class="Ionicons icon-shouye"></i>
       首页
   </a>
   <a class="tab-item">
-    <i class="icon ion-ios-paperplane-outline"></i>
+    <i class="Ionicons icon-zhoubian"></i>
       搜周边
   </a>
   <a class="tab-item">
-    <i class="icon ion-ios-bookmarks-outline"></i>
+    <i class="Ionicons icon-weibiaoti1"></i>
       活动
   </a>
   <a class="tab-item">
-    <i class="icon ion-ios-person-outline"></i>
+    <i class="Ionicons icon-studyuser"></i>
       个人中心
   </a>
 </div>
