--- a/Public/css/iconfont.css
+++ b/Public/css/iconfont.css
@@ -15,19 +15,5 @@
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
 }
-.icon-myfill:before { content: "\e600"; }
-.icon-unie64d:before { content: "\e603"; }
-.icon-unie65c:before { content: "\e604"; }
-.icon-unie63b:before { content: "\e605"; }
-.icon-home:before { content: "\e606"; }
-.icon-unie64a:before { content: "\e607"; }
-.icon-unie64c:before { content: "\e608"; }
-.icon-unie611:before { content: "\e609"; }
-.icon-unie615:before { content: "\e60a"; }
-.icon-unie606:before { content: "\e60b"; }
-.icon-unie637:before { content: "\e60c"; }
-.icon-unie647:before { content: "\e60d"; }
-.icon-unie648:before { content: "\e60e"; }
-.icon-unie649:before { content: "\e60f"; }
-.icon-plane:before { content: "\e601"; }
-.icon-computer:before { content: "\e602"; }
+.icon-iconfontunie61e:before { content: "\e611"; }
+.icon-iconfontunie61f:before { content: "\e612"; }
