--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -26,7 +26,7 @@
 <include file="indexTabs" />
 <include file="indexHome" />
 <include file="indexFullTime" />
-<include file="indexHours" />
+<include file="indexRim" />
 <include file="indexEvaluation" />
 <include file="indexEvaluationing" />
 <include file="indexActivity" />
