--- a/Application/Home/View/Index/indexActivityDetails.html
+++ b/Application/Home/View/Index/indexActivityDetails.html
@@ -1,3 +1,21 @@
-<script id="template/indexActivityDetails.html" type="text/ng-template">
-	
+<script id="templates/indexActivityDetails.html" type="text/ng-template">
+	<ion-view view-title="住店送牛奶">
+	<div class="list  has-header">
+		<div class="list">
+			<div class="list card">
+				<div class="item item-avatar">
+					<img class = "full-img" src="__IMG__/niunai.jpg">
+					<h2>活动</h2>
+					<p>住店送牛奶</p>
+				</div>
+				<div class="item item-body">
+					<img src ="__IMG__/niunai.jpg">
+					<p>
+						2015年11月24日之前，凡到本店住宿者，均可在晚七点以后在前台领取热牛奶一杯。
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</ion-view>
 </script>
