--- a/Application/Home/View/Index/indexToBeEvaluation.html
+++ b/Application/Home/View/Index/indexToBeEvaluation.html
@@ -1,3 +1,79 @@
-<script id="template/indexToBeEvaluation.html" type="text/ng-template">
+<script id="templates/indexToBeEvaluation.html" type="text/ng-template">
+	<ion-view view-title="待评价">
+	<div class="list  has-header">
 	
+		<div class="list">
+		    <div class="item item-thumbnail-left" href="#">
+		      <img src="__IMG__/jiudian.jpg">
+		      <h2>价格：￥99.9</h2>
+		      <h2>介绍:大床房</h2>
+		      <h2>入住时间:2015.11.23</h2>
+                 <button class="button button-icon-right button-small button-positive
+                 pull button-right">
+                评价赢积分
+               </button>
+		    </div>
+		 
+		<div class="list">
+		    <div class="item item-thumbnail-left" href="#">
+		      <img src="__IMG__/jiudian.jpg">
+		      <h2>价格：￥99.9</h2>
+		      <h2>介绍:大床房</h2>
+		      <h2>入住时间:2015.11.23</h2>
+                 <button class="button button-icon-right button-small button-positive
+                 pull button-right">
+                评价赢积分
+               </button>
+		    </div>
+		<div class="list">
+		    <div class="item item-thumbnail-left" href="#">
+		      <img src="__IMG__/jiudian.jpg">
+		      <h2>价格：￥99.9</h2>
+		      <h2>介绍:大床房</h2>
+		      <h2>入住时间:2015.11.23</h2>
+                 <button class="button button-icon-right button-small button-positive
+                 pull button-right">
+                评价赢积分
+               </button>
+		    </div>
+
+		<div class="list">
+		    <div class="item item-thumbnail-left" href="#">
+		      <img src="__IMG__/jiudian.jpg">
+		      <h2>价格：￥99.9</h2>
+		      <h2>介绍:大床房</h2>
+		      <h2>入住时间:2015.11.23</h2>
+                 <button class="button button-icon-right button-small button-positive
+                 pull button-right">
+                评价赢积分
+               </button>
+		    </div>
+
+		<div class="list">
+		    <div class="item item-thumbnail-left" href="#">
+		      <img src="__IMG__/jiudian.jpg">
+		      <h2>价格：￥99.9</h2>
+		      <h2>介绍:大床房</h2>
+		      <h2>入住时间:2015.11.23</h2>
+                 <button class="button button-icon-right button-small button-positive
+                 pull button-right">
+                评价赢积分
+               </button>
+		    </div>
+		    
+		<div class="list">
+		    <div class="item item-thumbnail-left" href="#">
+		      <img src="__IMG__/jiudian.jpg">
+		      <h2>价格：￥99.9</h2>
+		      <h2>介绍:大床房</h2>
+		      <h2>入住时间:2015.11.23</h2>
+                 <button class="button button-icon-right button-small button-positive
+                 pull button-right">
+                评价赢积分
+               </button>
+		    </div>
+	    </div>
+	    
+	</div>
+	</ion-view>
 </script>
