--- a/Application/Home/View/Index/indexToBeStay.html
+++ b/Application/Home/View/Index/indexToBeStay.html
@@ -1,3 +1,28 @@
-<script id="template/indexToBeStay.html" type="text/ng-template">
-	
+<script id="templates/indexToBeStay.html" type="text/ng-template">
+<ion-view view-title="待入住">
+	<div class="list  has-header">
+		<div class="list">
+			<div class="item item-thumbnail-left" href="#">
+				<img src="__IMG__/jiudian.jpg">
+				<h2>价格：￥99.9</h2>
+				<h2>介绍:大床房</h2>
+				<h2>入住时间:2015.11.23</h2>
+			</div>
+
+			<div class="item item-thumbnail-left" href="#">
+				<img src="__IMG__/jiudian.jpg">
+				<h2>价格：￥99.9</h2>
+				<h2>介绍:大床房</h2>
+				<h2>入住时间:2015.11.23</h2>
+			</div>
+
+			<div class="item item-thumbnail-left" href="#">
+				<img src="__IMG__/jiudian.jpg">
+				<h2>价格：￥99.9</h2>
+				<h2>介绍:大床房</h2>
+				<h2>入住时间:2015.11.23</h2>
+			</div>
+		</div>	    
+	</div>
+</ion-view>
 </script>
