--- a/Application/Weijingyun/View/Index/index.html
+++ b/Application/Weijingyun/View/Index/index.html
@@ -22,9 +22,9 @@
 <body ng-controller="MyCtrl">
 
 <div class="bar  bar-header bar-positive">
-  <a href="" class="button button-icon icon iconfont icon-iconfont-unie61e">2015年11月</a>
+  <a href="" class="button button-icon icon iconfont icon-iconfontunie61e">2015年11月</a>
   <h6 class="title">2015年12月</h6>
-  <a href="" class="button button-icon icon iconfont icon-iconfont-unie61f">2016年1月</a>
+  <a href="" class="button button-icon icon iconfont icon-iconfontunie61f">2016年1月</a>
 </div>
 
 <ion-content class="bar-content ">
