注释，我的积分

--- a/Application/Home/View/Index/indexActivityDetails.html
+++ b/Application/Home/View/Index/indexActivityDetails.html
@@ -4,7 +4,7 @@
 		<div class="list">
 			<div class="list card">
 				<div class="item item-avatar">
-					<img class = "full-img" src="__IMG__/niunai.jpg">
+					<img src="__IMG__/niunai.jpg">
 					<h2>活动</h2>
 					<p>住店送牛奶</p>
 				</div>
