--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -35,6 +35,7 @@
 <include file="indexToBePaid" />
 <include file="indexToBeStay" />
 <include file="indexToBeEvaluation" />
+<include file="indexIntegral" />
 </body>
 
 
