--- a/Application/Home/View/Index/indexPersonalCenter.html
+++ b/Application/Home/View/Index/indexPersonalCenter.html
@@ -31,12 +31,12 @@
 
 	</div>
 
-	<a class="item item-icon-left item-icon-right" href="#">
+	<a href="#/tab/integral" class="item item-icon-left item-icon-right" href="#">
 		<i class="icon ion-ios-list-outline"></i>
 		全部订单
 		<i class="icon ion-ios-arrow-right"></i>
 	</a>
-	<a class="item item-icon-left item-icon-right" href="#">
+	<a href="#/tab/integral" class="item item-icon-left item-icon-right">
 		<i class="icon ion-ios-pricetags-outline"></i>
 		查看积分
 		<i class="icon ion-ios-arrow-right"></i>
