加上了日期的选择

--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -26,6 +26,7 @@
 <include file="indexTabs" />
 <include file="indexHome" />
 <include file="indexFullTime" />
+<include file="indexDate" />
 <include file="indexRim" />
 <include file="indexEvaluation" />
 <include file="indexEvaluationing" />
