--- a/Application/Home/View/Index/indexApp.js.html
+++ b/Application/Home/View/Index/indexApp.js.html
@@ -36,6 +36,15 @@ app.config(function($stateProvider, $urlRouterProvider){
             }
         }
     })
+    .state('tabs.date',{
+        url: "/date",
+        views:{
+            //评论界面
+            'home-tab':{
+                templateUrl: "templates/indexDate.html"
+            }
+        }
+    })
     .state("tabs.rim",{
         url: "/rim",
         views: {
