--- a/Application/Home/View/Index/indexHome.html
+++ b/Application/Home/View/Index/indexHome.html
@@ -35,7 +35,7 @@
   <a href="" class="button button-stable button-full col">小时房</a>
 </div>
 <!-- 日期 -->
-<div class="row">
+    <div class="row">
       <div class="col">
         <h3>日</h3>
         <h3>期</h3>
@@ -44,7 +44,7 @@
       <h6>2015年11月23日入住</h6>
       <h6>2015年11月24日离店</h6>
       </div>
-      <a class="col button button-icon icon ion-chevron-right"></a>
+      <a href="#/tab/date" class="col button button-icon icon ion-chevron-right"></a>
 </div>
 </ion-view>
 </script>
