--- a/Application/Home/View/Index/indexApp.js.html
+++ b/Application/Home/View/Index/indexApp.js.html
@@ -39,7 +39,7 @@ app.config(function($stateProvider, $urlRouterProvider){
     .state('tabs.date',{
         url: "/date",
         views:{
-            //评论界面
+            //选择日期
             'home-tab':{
                 templateUrl: "templates/indexDate.html"
             }
