选择日期调整

--- a/Application/Home/View/Index/indexDate.html
+++ b/Application/Home/View/Index/indexDate.html
@@ -1,5 +1,10 @@
 <script id="templates/indexDate.html" type="text/ng-template">
-	<ion-view view-title="2015年12月">
+	<ion-view view-title="选择日期">
+	<div class="bar bar-subheader bar-stable">
+  <a href="" class="button button-icon icon ion-ios-arrow-left"></a>
+  <h6 class="title">2015年12月</h6>
+  <a href="" class="button button-icon icon ion-ios-arrow-right"></a>
+</div>
 	<ion-content>
 	<div class="list has-header">
 		<div class="item row">
@@ -55,9 +60,6 @@
 			<div class="col">31</div>
 			<div class="col"></div>
 			<div class="col"></div>
-		</div>
-		<div class="item item-divider">
-			Candy Bars
 		</div>
 	</div>
 </ion-content>
