--- a/Application/Weijingyun/View/Index/index.html
+++ b/Application/Weijingyun/View/Index/index.html
@@ -20,15 +20,18 @@
 
 </head>
 <body ng-controller="MyCtrl">
-
 <div class="bar  bar-header bar-positive">
+  <a href="" class="button button-icon icon iconfont icon-iconfontunie61e">首页</a>
+  <h1 class="title">选择日期</h1>
+</div>
+<div class="bar bar-subheader bar-stable">
   <a href="" class="button button-icon icon iconfont icon-iconfontunie61e"></a>
   <h6 class="title">2015年12月</h6>
   <a href="" class="button button-icon icon iconfont icon-iconfontunie61f"></a>
 </div>
 
 <ion-content class="bar-content ">
-<div class="list has-header">
+<div class="list has-subheader">
   <div class="item row">
     <div class="col">日</div>
     <div class="col">一</div>
@@ -44,7 +47,7 @@
     <div class="col stable">1</div>
     <div class="col stable">2</div>
     <div class="col stable">3</div>
-    <div class="col">4</div>
+    <div class="col positive">4</div>
     <div class="col">5</div>
   </div>
   <div class="item row">
@@ -82,9 +85,6 @@
     <div class="col">31</div>
     <div class="col"></div>
     <div class="col"></div>
-  </div>
-  <div class="item item-divider">
-    Candy Bars
   </div>
 </div>
 </ion-content>
