路由完善（手机测试过了）

--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -27,9 +27,11 @@
 <include file="indexHome" />
 <include file="indexFullTime" />
 <include file="indexDate" />
+<include file="indexIntroduction" />
 <include file="indexRim" />
 <include file="indexEvaluation" />
 <include file="indexEvaluationing" />
+<include file="indexSuccess" />
 <include file="indexActivity" />
 <include file="indexActivityDetails" />
 <include file="indexPersonalCenter" />
@@ -37,6 +39,7 @@
 <include file="indexToBeStay" />
 <include file="indexToBeEvaluation" />
 <include file="indexIntegral" />
+<include file="indexAllOrder" />
 </body>
 
 
