--- a/Application/Home/View/Index/indexEvaluationing.html
+++ b/Application/Home/View/Index/indexEvaluationing.html
@@ -35,16 +35,17 @@
 						</button>
 					</div>
 					<div class="col col-33">
-						<img src="__IMG__/rujia1.png">
+						<img src="__IMG__/rujia.png">
 					</div>
 				</div>
 				<!-- </div> -->
 			</div>
+			<a href="#/tab/success">
 			<div class="padding">
 				<button class="button button-full button-positive">
 					提交评论
 				</button>
-			</div>
+			</div></a>
 			<div>
 
 			</ion-view>
