--- a/Application/Home/View/Index/indexHome.html
+++ b/Application/Home/View/Index/indexHome.html
@@ -16,7 +16,7 @@
 <div><img src="__IMG__/dianping.png"></div>
 <!-- 酒店介绍 -->
 <div class="list introduction">
-    <a class="item item-thumbnail-left" href="#">
+    <a class="item item-thumbnail-left" href="#/tab/introduction">
       <img src="__IMG__/logo.jpg">
       <h2>酒店介绍</h2>
       <h4>洛克公寓，本来生活。</h4>
