--- a/Application/Home/View/Index/indexPersonalCenter.html
+++ b/Application/Home/View/Index/indexPersonalCenter.html
@@ -1,7 +1,7 @@
 <script id="templates/indexPersonalCenter.html" type="text/ng-template">
 	<ion-view view-title="个人中心">
-	<ion-content class="bar-content">
-	<div class="list has-header">
+	<ion-content>
+	<div class="list">
 		<a class="item item-avatar" href="#">
 			<img src="__IMG__/1024.jpg">
 			<h2>昵称</h2>
@@ -31,20 +31,20 @@
 
 	</div>
 
-	<a href="#/tab/integral" class="item item-icon-left item-icon-right" href="#">
+	<a href="#/tab/allOrder" class="item item-icon-left item-icon-right">
 		<i class="icon ion-ios-list-outline"></i>
 		全部订单
 		<i class="icon ion-ios-arrow-right"></i>
 	</a>
-	<a href="#/tab/integral" class="item item-icon-left item-icon-right">
+	<a href="#/tab/integral2" class="item item-icon-left item-icon-right">
 		<i class="icon ion-ios-pricetags-outline"></i>
 		查看积分
 		<i class="icon ion-ios-arrow-right"></i>
 	</a>
-	<a class="item item-icon-left item-icon-right" href="#">
+	<a class="item item-icon-left" href="#">
 		<i class="icon ion-ios-telephone-outline"></i>
-		客服  ********
-		<i class="icon ion-ios-arrow-right"></i>
+		客服  15302056835
+		
 	</a>
 </div>
 </ion-content>
