--- a/Application/Anqiang/View/User/commentsok.html
+++ b/Application/Anqiang/View/User/commentsok.html
@@ -23,7 +23,7 @@
 <body ng-controller="MyCtrl">
   <div class="bar bar-header bar-positive">
     <a class="button icon button-icon ion-chevron-left"></a>
-    <h1 class="title">所有评论</h1>
+    <h1 class="title">评论成功</h1>
   </div>
 <div class="scroll-content has-header padding commentsok">
   <img src="__IMG__/mark.png">
